Fix firebird and thunderbird bustage by unforking contents of nsIGlobalHistory (which was frozen) and by tweaking the root Makefile.in.  b=212509  r=mscott