uriloader/exthandler/nsExternalHelperAppService.cpp
@@ -87,9 +87,6 @@
 #include "nsIPrefService.h"
 
 #include "nsIGlobalHistory.h"
-#ifdef MOZ_PHOENIX
-#include "nsToolkitCompsCID.h"
-#endif
 
 #include "nsCRT.h"
 #include "plstr.h"
